roomのテーブル作成（見た目のみ）

--- a/room2.html
+++ b/room2.html
@@ -49,6 +49,10 @@
             document.getElementById('rooms').innerHTML = html;
         }
 
+        async function buttonPressed(){
+
+        }
+
     </script>
 
 </head>
@@ -67,6 +71,11 @@
     </div>
     <h2>rooms</h2>
     <div id="rooms"></div>
+    <table border="1">
+        <tr>
+            <td>roomA</td><td><a href="version-control-test.html">入る</a></td>
+        </tr>
+    </table>
 </body>
 
 </html>
