usertopからそのままマッチングする

--- a/room2.html
+++ b/room2.html
@@ -64,16 +64,18 @@
         <a href="usertop.html">top</a>
     </div>
     <hr>
-    <div>
-        <h2>ルームに入る</h2>
-        <input id="roomname" type="text">
-        <button onclick="createRoom()">new room</button>
-    </div>
+
     <h2>rooms</h2>
     <div id="rooms"></div>
     <table border="1">
         <tr>
             <td>roomA</td><td><a href="version-control-test.html">入る</a></td>
+        </tr>
+        <tr>
+            <td>roomB</td><td><a href="version-control-test.html">入る</a></td>
+        </tr>
+        <tr>
+            <td>roomC</td><td><a href="version-control-test.html">入る</a></td>
         </tr>
     </table>
 </body>
