ルール説明

--- a/usertop.html
+++ b/usertop.html
@@ -35,11 +35,16 @@
         <a href="javascript:logout()">logout</a>
     </div>
     <hr>
+
+    <h2>ルール説明</h2>
     <div>
-        <a href="room2.html">タイピングゲームへ進む</a>
+        2 vs 2 で日本の昔話のタイピングスピードを競ってみよう！！<br>
+        マッチングボタンを押すと自動でチームと対戦相手が決定します<br>
+        タイピングは交互にします<br>
+        全部のタイピングの合計時間で勝敗が決まります<br>
     </div>
     <div>
-        ルール説明
+        <a href="room2.html">マッチングボタン</a>
     </div>
 </body>
 
