URLから見られるようにした

--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
 </head>
 
 <body>
-    <h1>isapp3</h1>
+    <h1>タイピングゲーム</h1>
     <div style="text-align: right;">
         ようこそ<span id="lastname"></span> <span id="firstname"></span>さん
         <a href="javascript:logout()">logout</a>
     </div>
     <hr>
+
+    <h2>ルール説明</h2>
     <div>
-        <a href="robby.html">robbyへ</a>
+        2 vs 2 で日本の昔話のタイピングスピードを競ってみよう！！<br>
+        マッチングボタンを押すと自動でチームと対戦相手が決定します<br>
+        タイピングは交互にします<br>
+        全部のタイピングの合計時間で勝敗が決まります<br>
+    </div>
+    <div>
+        <a href="room2.html">マッチングボタン</a>
     </div>
 </body>
 
