いらないところを消した

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         全部のタイピングの合計時間で勝敗が決まります<br>
     </div>
     <div>
-        <a href="room2.html">マッチングボタン</a>
+        <a href="room.html">マッチングボタン</a>
     </div>
 </body>
 
