入力判定部分

--- a/game.html
+++ b/game.html
@@ -12,22 +12,25 @@
         osql.requireLogin();
 
         var me;
-        var roomId = osql.getParam('roomId');
+        var room = A;
 
         $(document).ready(async function () {
             me = await osql.getMe();
             document.getElementById('firstname').innerHTML = me.fname;
             document.getElementById('lastname').innerHTML = me.lname;
-
-            var sql = `select * from Rooms where id = ${roomId};`;
-            var objects = await osql.connect(sql);
-
-            var room = objects[0];
-            document.getElementById('roomname').innerHTML = room.name;
-
-            await refreshComments();
-            setInterval(refreshComments, 2000);
         });
+        
+        function buttonPressed(){
+            var sentence = "monndaibun";
+            var anser = document.getElementById('tf1').value;
+            if(sentence == anser){
+                document.getElementById('result').innerHTML = 'OK'
+            }
+            else{
+                document.getElementById('result').innerHTML = 'もう一度入力してください'
+            }
+
+        }
 
 
     </script>
@@ -35,6 +38,16 @@
 </head>
 
 <body>
+    <p id = "sentence">
+        monndaibun
+    </p>
+    回答: <input id="tf1" value="" type="textfield">
+    <button onclick = "buttonPressed()">判定</button>
+    <p id = "result">
+        判定結果
+    </p>
+
+
 
 </body>
 
