--- a/roomA.html
+++ b/roomA.html
@@ -18,7 +18,34 @@
             me = await osql.getMe();
             document.getElementById('firstname').innerHTML = me.fname;
             document.getElementById('lastname').innerHTML = me.lname;
+            var name = me.lname + ' ' + me.fname
+            console.log(name)
+
+           var sql = `insert into RoomA (name) values('${name}');`;
+           var RoomA = await osql.connectInsert(sql);
+           console.log(RoomA)
+           
+           maketeam()
+
         });
+
+        async function maketeam(){
+            me = await osql.getMe();
+            document.getElementById('firstname').innerHTML = me.fname;
+            document.getElementById('lastname').innerHTML = me.lname;
+            var name = me.lname + ' ' + me.fname
+
+            var sql =  `select id from RoomA where name = ('${name}');`
+            var RoomA = await osql.connectInsert(sql);
+           console.log(RoomA)
+
+           var team = RoomA%2;
+           console.log(team) 
+
+
+
+
+        }
         
     </script>
 
@@ -31,20 +58,6 @@
         <a href="usertop.html">top</a>
     </div>
     <hr>
-
-    <h2>rooms</h2>
-    <div id="rooms"></div>
-    <table border="1">
-        <tr>
-            <td>roomA</td><td><a href="roomA.html">入る</a></td>
-        </tr>
-        <tr>
-            <td>roomB</td><td><a href="version-control-test.html">入る</a></td>
-        </tr>
-        <tr>
-            <td>roomC</td><td><a href="version-control-test.html">入る</a></td>
-        </tr>
-    </table>
 </body>
 
 </html>
