--- a/room.html
+++ b/room.html
@@ -18,62 +18,33 @@
             me = await osql.getMe();
             document.getElementById('firstname').innerHTML = me.fname;
             document.getElementById('lastname').innerHTML = me.lname;
-
-            var sql = `select * from Rooms where id = ${roomId};`;
-            var objects = await osql.connect(sql);
-
-            var room = objects[0];
-            document.getElementById('roomname').innerHTML = room.name;
-
-            await refreshComments();
-            setInterval(refreshComments, 2000);
         });
-
-        async function newComment() {
-            var name = document.getElementById('comment').value;
-            var sql = `insert into Comments (roomId, userId, comment, time) values(${roomId}, '${me.id}','${name}', now());`;
-            var commentId = await osql.connectInsert(sql);
-            console.log(commentId);
-
-            await refreshComments();
-        }
-
-        async function refreshComments() {
-            var sql = `select * from Comments where roomId = ${roomId} order by time desc limit 10;`;
-            var objects = await osql.connect(sql);
-            console.log(objects);
-            var html = '';
-            html = html + '<table border="1">';
-            for (var i = 0; i < objects.length; i++) {
-                html = html + '<tr>';
-                var object = objects[i];
-                html = html + `<td>${object.id}</td>`;
-                html = html + `<td>${object.time}</td>`;
-                html = html + `<td>${object.userId}</td>`;
-                html = html + `<td>${object.comment}</td>`;
-                html = html + '</tr>';
-            }
-            html = html + '</table>';
-            document.getElementById('comments').innerHTML = html;
-        }
-
+        
     </script>
 
 </head>
 
 <body>
-    <h1>talkroom <span id="roomname"></span></h1>
+    <h1>room</h1>
     <div style="text-align: right;">
         ようこそ<span id="lastname"></span> <span id="firstname"></span>さん
-        <a href="index.html">top</a>
+        <a href="usertop.html">top</a>
     </div>
     <hr>
-    <div>
-        <input id="comment" type="text">
-        <button onclick="newComment()">new comment</button>
-    </div>
-    <br>
-    <div id="comments"></div>
+
+    <h2>rooms</h2>
+    <div id="rooms"></div>
+    <table border="1">
+        <tr>
+            <td>roomA</td><td><a href="version-control-test.html">入る</a></td>
+        </tr>
+        <tr>
+            <td>roomB</td><td><a href="version-control-test.html">入る</a></td>
+        </tr>
+        <tr>
+            <td>roomC</td><td><a href="version-control-test.html">入る</a></td>
+        </tr>
+    </table>
 </body>
 
 </html>
