--- a/index.html
+++ b/index.html
@@ -35,16 +35,8 @@
         <a href="javascript:logout()">logout</a>
     </div>
     <hr>
-
-    <h2>ルール説明</h2>
     <div>
-        2 vs 2 で日本の昔話のタイピングスピードを競ってみよう！！<br>
-        マッチングボタンを押すと自動でチームと対戦相手が決定します<br>
-        タイピングは交互にします<br>
-        全部のタイピングの合計時間で勝敗が決まります<br>
-    </div>
-    <div>
-        <a href="room.html">マッチングボタン</a>
+        <a href="robby.html">ロビーに移動</a>
     </div>
 </body>
 
