--- a/robby.html
+++ b/robby.html
@@ -23,8 +23,7 @@
         });
 
         async function createRoom() {
-            var name = document.getElementById('roomname').value;
-            var sql = `insert into Rooms (name) values('${name}');`;
+            var sql = `insert into Rooms (turn) values('0');`;
             var roomId = await osql.connectInsert(sql);
             console.log(roomId);
 
@@ -40,8 +39,7 @@
             for (var i = 0; i < objects.length; i++) {
                 html = html + '<tr>';
                 var object = objects[i];
-                html = html + `<td>${object.id}</td>`;
-                html = html + `<td>${object.name}</td>`;
+                html = html + `<td>Room${object.id}</td>`;
                 html = html + `<td><a href="room.html?roomId=${object.id}">入室</a></td>`;
                 html = html + '</tr>';
             }
@@ -61,11 +59,10 @@
     </div>
     <hr>
     <div>
-        <h2>create room</h2>
-        <input id="roomname" type="text">
-        <button onclick="createRoom()">new room</button>
+        <h2>ルームを作る</h2>
+        <button onclick="createRoom()">作成</button>
     </div>
-    <h2>rooms</h2>
+    <h2>ルーム一覧</h2>
     <div id="rooms"></div>
 </body>
 
