--- a/room.html
+++ b/room.html
@@ -25,19 +25,12 @@
             var room = objects[0];
             document.getElementById('roomname').innerHTML = room.name;
             
-            await refreshComments();
-            setInterval(refreshComments, 2000);
+            await refreshParticipants();
+            setInterval(refreshParticipants, 2000);
         });
 
-        async function newComment() {
-            var name = document.getElementById('comment').value;
-            var sql = `insert into Comments (roomId, userId, comment, time) values(${roomId}, '${me.id}','${name}', now());`;
-            var commentId = await osql.connectInsert(sql);
-            console.log(commentId);
 
-            await refreshComments();
-        }
-        async function refreshComments() {
+        async function refreshParticipants() { //参加者を表示する関数
             var sql = `select * from Comments where roomId = ${roomId} order by time desc limit 10;`;
             var objects = await osql.connect(sql);
             console.log(objects);
@@ -55,7 +48,16 @@
             html = html + '</table>';
             document.getElementById('comments').innerHTML = html;
         }
-        
+
+        function gamestart(){//ゲームを始める関数
+            var turn = 1;
+            var sql = 'update Rooms set turn = 1 where id = ' + roomID +';';
+            var startID = osql.connectInsert(sql);
+            console.log(startId);
+            //ゲームのページに動くようにする
+
+        }
+
     </script>
 
 </head>
@@ -72,12 +74,10 @@
     <h2>rooms</h2>
     <h1>talkroom <span id="roomname"></span></h1>
     <div id="rooms"></div>
-    <div>
-        <input id="comment" type="text">
-        <button onclick="newComment()">new comment</button>
-    </div>
     <br>
     <div id="comments"></div>
+
+    <buton onclick = "gamestart()">start</buton>
 
 </body>
 
