最初の＜足した

--- a/game.html
+++ b/game.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -14,10 +14,13 @@
         var me;
         var roomId = osql.getParam('roomId');
         console.log(roomId)
-</script>
+
+
+    </script>
 
 </head>
 
 <body>
     game
+
 </body>
