--- a/game.html
+++ b/game.html
@@ -50,7 +50,20 @@
             }
         }
 
-
+        async function buttonclick(){
+            var word = document.getElementById('tf1').value;
+            var sql = `select * from Rooms where id = ${roomId};`;
+            var object = await osql.connect(sql);
+            console.log(object);
+            var turn = object[0].turn;
+            var sql2 = `insert into Answers(content, turn) values ('${word}',${turn})`;
+            var contents = await osql.connect(sql2);
+            console.log(contents); 
+            var newturn = Number(turn) + 1
+            var sql3 = `update Rooms set turn = ${newturn} where id =${roomId};`;
+            var turnchange = await osql.connect(sql3);
+            console.log(turnchange);            
+        }
 
 
     </script>
