場所だけ移動しました！

--- a/game.html
+++ b/game.html
@@ -40,27 +40,17 @@
             console.log(object);
             var turn = object[0].turn;
             if (turn % all == sequence){ //自分の番の時
-                var html =  `<input id="tf1" value="" type="textfield"> <button onclick = 'buttonclick()'>送信</button>`
+                var answerhtml =  `<input id="tf1" value="" type="textfield"> <button onclick = 'buttonclick()'>送信</button>`
                 document.getElementById('turn').innerHTML = 'あなたの番です';
-                document.getElementById('answer').innerHTML = html;
+                document.getElementById('answer').innerHTML = answerhtml;
             } 
             else{
                 document.getElementById('turn').innerHTML = '相手の入力待ちです';
                 document.getElementById('answer').innerHTML = ``;
             }
-        }
-
-        async function buttonclick(){
-            var word = document.getElementById('tf1').value;
-            var sql = `select * from Rooms where id = ${roomId};`;
-            var object = await osql.connect(sql);
-            console.log(object);
-            var turn = object[0].turn;
-            var sql2 = `insert into Answers(roomId,turn, content) values (${roomId},${turn},'${word}')`;
-            var contents = await osql.connect(sql2);
-            console.log(contents);
             var sql4 = `select * from Answers where roomId=${roomId} order by turn asc;`;
             var object4 = await osql.connect(sql4);
+            console.log(object4)
             var html = '';
             html = html + '<table border="1">';
             for (var i = 0; i < object4.length; i++) {
@@ -72,6 +62,18 @@
             }
             html = html + '</table>';
             document.getElementById('content').innerHTML = html;
+
+        }
+
+        async function buttonclick(){
+            var word = document.getElementById('tf1').value;
+            var sql = `select * from Rooms where id = ${roomId};`;
+            var object = await osql.connect(sql);
+            console.log(object);
+            var turn = object[0].turn;
+            var sql2 = `insert into Answers(roomId,turn, content) values (${roomId},${turn},'${word}')`;
+            var contents = await osql.connect(sql2);
+            console.log(contents);           
             var newturn = Number(turn) + 1;
             var sql3 = `update Rooms set turn = ${newturn} where id =${roomId};`;
             var turnchange = await osql.connect(sql3);
