--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
                 sequence = 0;
             }
 
-            setInterval(await turnchecking(all, sequence), 2000);
+            setInterval(turnchecking(all, sequence), 2000);
         });
 
         async function turnchecking(all, sequence){
