--- a/game.html
+++ b/game.html
@@ -12,41 +12,39 @@
         osql.requireLogin();
 
         var me;
-        var html;
         var roomId = osql.getParam('roomId');
-        console.log(roomId)
+
         $(document).ready(async function () {
             me = await osql.getMe();
-            var sql = `select sequence from Participate where roomId = ${roomId} and userId = '${me.id}' ;` ;
-            var object = await osql.connect(sql);
-            console.log(object);
-            sequence = object[0].sequence //複数入ってる場合は、最初の行の番号
-            document.getElementById('test').innerHTML = sequence;//番号ちゃんと入ってるか確認用（後で消す）
-            var sql2 = `select * from Participate where roomId = ${roomId};`; 
-            var pop = await osql.connect(sql2);
-            console.log(pop);
-            var all = pop.length//人数
-            if(sequence == all){
-                sequence = 0;
-            }
+            document.getElementById('firstname').innerHTML = me.fname;
+            document.getElementById('lastname').innerHTML = me.lname;
 
-            setInterval(turnchecking(all, sequence), 2000);
+            await refreshContents();
+            setInterval(refreshContents, 2000);
+
+            await turnchecking()
+            setInterval(turnchecking, 2000)
         });
 
-        async function turnchecking(all, sequence){
+        async function sendAnswer() {
+            var word = document.getElementById('tf1').value;
             var sql = `select * from Rooms where id = ${roomId};`;
             var object = await osql.connect(sql);
             console.log(object);
             var turn = object[0].turn;
-            if (turn % all == sequence){ //自分の番の時
-                var answerhtml =  `<input id="tf1" value="" type="textfield"> <button onclick = 'buttonclick()'>送信</button>`
-                document.getElementById('turn').innerHTML = 'あなたの番です';
-                document.getElementById('answer').innerHTML = answerhtml;
-            } 
-            else{
-                document.getElementById('turn').innerHTML = '相手の入力待ちです';
-                document.getElementById('answer').innerHTML = ``;
-            }
+            var sql2 = `insert into Answers(roomId,turn, content) values (${roomId},${turn},'${word}')`;
+            var contents = await osql.connect(sql2);
+            console.log(contents);           
+            var newturn = Number(turn) + 1;
+            var sql3 = `update Rooms set turn = ${newturn} where id =${roomId};`;
+            var turnchange = await osql.connect(sql3);
+            console.log(turnchange);
+
+
+            refreshContents();
+        }
+
+        async function refreshContents() {          
             var sql4 = `select * from Answers where roomId=${roomId} order by turn asc;`;
             var object4 = await osql.connect(sql4);
             console.log(object4)
@@ -61,34 +59,56 @@
             }
             html = html + '</table>';
             document.getElementById('content').innerHTML = html;
-
         }
 
-        async function buttonclick(){
-            var word = document.getElementById('tf1').value;
+        async function turnchecking(){
+            var me = await osql.getMe();
+            var sql = `select sequence from Participate where roomId = ${roomId} and userId = '${me.id}' ;` ;
+            var object = await osql.connect(sql);
+            console.log(object);
+            sequence = object[0].sequence //複数入ってる場合は、最初の行の番号）
+            var sql2 = `select * from Participate where roomId = ${roomId};`; 
+            var pop = await osql.connect(sql2);
+            console.log(pop);
+            var all = pop.length//人数
+            if(sequence == all){
+                sequence = 0;
+            }
             var sql = `select * from Rooms where id = ${roomId};`;
             var object = await osql.connect(sql);
             console.log(object);
             var turn = object[0].turn;
-            var sql2 = `insert into Answers(roomId,turn, content) values (${roomId},${turn},'${word}')`;
-            var contents = await osql.connect(sql2);
-            console.log(contents);           
-            var newturn = Number(turn) + 1;
-            var sql3 = `update Rooms set turn = ${newturn} where id =${roomId};`;
-            var turnchange = await osql.connect(sql3);
-            console.log(turnchange);            
-        }
+            if (turn % all == sequence){ //自分の番の時
+                var answerhtml =  `<input id="tf1" value="" type="textfield"> <button onclick = 'sendAnswer()'>送信</button>`
+                document.getElementById('turn').innerHTML = 'あなたの番です';
+                document.getElementById('answer').innerHTML = answerhtml;
+            } 
+            else{
+                document.getElementById('turn').innerHTML = '相手の入力待ちです';
+                document.getElementById('answer').innerHTML = ``;
+            }
 
+        }
 
     </script>
 
 </head>
 
 <body>
-    game
-    <div id="test">テスト欄（後で消す）</div>
+    <h1>robby</h1>
+    <div style="text-align: right;">
+        ようこそ<span id="lastname"></span> <span id="firstname"></span>さん
+        <a href="index.html">top</a>
+    </div>
+    <hr>
     <div id="turn">順番</div>
     <div id="answer"></div>
+    <div>
+        <h2>ルームを作る</h2>
+        <button onclick="sendAnswer()">回答</button>
+    </div>
+    <h2>ルーム一覧</h2>
     <div id="content"></div>
-
 </body>
+
+</html>
