名前変えた

--- a/game.html
+++ b/game.html
@@ -93,7 +93,7 @@
 </head>
 
 <body>
-    <h1>robby</h1>
+    <h1>game</h1>
     <div style="text-align: right;">
         ようこそ<span id="lastname"></span> <span id="firstname"></span>さん
         <a href="index.html">top</a>
@@ -105,7 +105,7 @@
         <input id="tf1" value="" type="textfield"> 
         <button onclick="sendAnswer()">回答</button>
     </div>
-    <h2>ルーム一覧</h2>
+    <h2>回答履歴</h2>
     <div id="content"></div>
 </body>
 
